Bug 92714 - Deletion of an index/table as first element of a page resets page style to default
Summary: Deletion of an index/table as first element of a page resets page style to de...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: low minor
Assignee: Justin L
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Writer-Styles-Page
  Show dependency treegraph
 
Reported: 2015-07-13 23:02 UTC by Michael Fiedler
Modified: 2025-09-18 17:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
test case document for reproducing the problem (11.73 KB, application/vnd.oasis.opendocument.text)
2015-07-13 23:02 UTC, Michael Fiedler
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Fiedler 2015-07-13 23:02:05 UTC
Created attachment 117218 [details]
test case document for reproducing the problem

Steps to reproduce:

1. Open the attached document.  The first page is using page style "First page".  It has a header and two tables of content at the beginning of the text body.
2. Delete the first table of contents.


Expected behaviour:

No side effects occur.  (Everything works as expected if the second table of contents is being deleted.)


Actual behaviour:

On deletion of the table of contents, the page style is reset to "Default Style", making the header disappear.
Comment 1 Michael Fiedler 2015-07-13 23:03:57 UTC
I can also reproduce this using LibreOffice 3.5.4.2 from Debian Linux.
Comment 2 Michael Fiedler 2015-07-13 23:06:51 UTC
The latest version I have tested is LibreOffice 4.4.4.3.
Comment 3 Buovjaga 2015-07-23 16:59:02 UTC
Repro with test document.

Win 7 Pro 64-bit Version: 5.1.0.0.alpha1+ (x64)
Build ID: e92a8b92072284fd7c37d7bb3e1e8fe72a185f35
TinderBox: Win-x86_64@62-TDF, Branch:MASTER, Time: 2015-07-22_21:46:26
Locale: fi-FI (fi_FI)
Comment 4 QA Administrators 2016-09-20 10:18:04 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2021-01-18 04:08:27 UTC Comment hidden (obsolete)
Comment 6 QA Administrators 2023-01-19 03:24:59 UTC Comment hidden (obsolete)
Comment 7 QA Administrators 2025-01-19 03:10:32 UTC Comment hidden (obsolete, spam)
Comment 8 Justin L 2025-09-01 16:39:40 UTC
repro 26.2+. Inherited from OOo.

NOTICE: following the Steps-To-Reproduce, it APPEARS to have been fixed in 24.2.2 by commit 0c96119895b347f8eb5bb89f393351bd3c02b9f1
Author: Mike Kaganski on Fri Feb 9 11:56:19 2024
    tdf#159565 prerequisite: make hidden sections have zero-height frames

However, that is actually a layout bug. If you round-trip the file (or toggle View - Web) then the heading will be shown as lost. So the reported problem still remains - just not so obvious to notice.

Apparently (based on testing), when a table or paragraph is deleted, the RES_PAGEDESC property is normally transferred to the next paragraph/table.

The same thing ought to happen when a field is deleted.
Comment 9 Commit Notification 2025-09-18 17:09:42 UTC
Justin Luth committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/441f6354987e2e8cccd58e0cff8408cf6088ad41

tdf#92714 sw: transfer breaks when deleting TOC

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.