tdf#92714 sw: transfer breaks when deleting TOC

The table of contents can contain a page break.

When deleting a TOC, the page break
should be transferred to the following
paragraph or table.

Something similar happens with DelFullPara and DelTable.

make CppunitTest_sw_layoutwriter5 \
    CPPUNIT_TEST_NAME=testTdf92714_TOC_pageBreak

Change-Id: I3d0e61e0c6a9b7544fe6488f8122316fff37811a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/191107
Tested-by: Jenkins
Reviewed-by: Justin Luth <jluth@mail.com>